--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ www/swipe-back-c7acdfde-js-es2015.js.map
 www/tap-click-606f325e-js-es2015.js.map
 www/vendor-es2015.js.map
 www/vendor-es5.js.map
+/node_modules/
